# quicktest.nvim

./: .gitignore  .stylua.toml  CLAUDE.md  Makefile  README.md
doc/: my-template-docs.txt
lua/: quicktest.lua
lua/quicktest/: colored_printer.lua  fs-utils.lua  fs_utils.lua  module.lua  navigation.lua  notify.lua  storage.lua  ts.lua  ui.lua
lua/quicktest/adapters/criterion/: criterion.lua  init.lua  meson.lua  util.lua
lua/quicktest/adapters/dart/: init.lua
lua/quicktest/adapters/elixir/: init.lua  query.lua
lua/quicktest/adapters/golang/: cmd.lua  (+1 more)
lua/quicktest/strategies/: dap.lua  default.lua  init.lua
lua/quicktest/ui/: diagnostics.lua  init.lua  panel.lua  quickfix.lua  status.lua  summary.lua
plugin/: quicktest.lua
tests/gotest/: go.mod
tests/gotest/abc/: abc_test.go
tests/plugin_name/: plugin_name_spec.lua
tests/support/criterion/: README.md  meson.build  test_example.c
tests/support/criterion/subprojects/criterion/: meson.build  test_example.c
tests/support/criterion/subprojects/criterion/criterion-2.4.1/lib/: libcriterion.so.3  libcriterion.so.3.2.0
tests/support/criterion/subprojects/criterion/criterion-2.4.1/lib/pkgconfig/: criterion.pc
tests/support/elixir_example/: .gitignore  README.md  mix.exs
tests/support/gotest/: go.mod
tests/support/hello-elixir/: mix.exs
tests/support/pytest/: README.md  test_simple.py
tests/support/rspec/: Gemfile  README_RSPEC.md
tests/support/ts-js-playwright/: package-lock.json  package.json  playwright.config.ts
tests/support/ts-js-vitest/: biome.json  package-lock.json  package.json
(+57 files in other folders)
